tests/core/error/values-2.rq
SELECT ?a ?b { VALUES () { (1) } }
